# switch_win

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
src/switch_win/: back.py  main.py  utils.py
src/switch_win.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
