[metadata]
name = switch_win
version = 2024.2.7.18
author = YanChengxin
author_email = yan.cheng.xin@foxmail.com
description = 确定的切换窗口
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yanchengxin2018/qui
project_urls =
    Bug Tracker = https://github.com/yanchengxin2018/switch_win
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10.12

[options.packages.find]
where = src